tests/ivg/invalid/invalid_color_name.ivg
format IVG-3
// invalid color name
fill blurple
